--- a/SOC/SOCassets/ScriptAssets/Script Library/Templates/AutoSendHelicopterForInjuredTarget.xml
+++ b/SOC/SOCassets/ScriptAssets/Script Library/Templates/AutoSendHelicopterForInjuredTarget.xml
@@ -593,236 +593,23 @@ GameObject.SendCommand( GameObject.GetGameObjectId( "TppHeli2", "SupportHeli" ),
     </UserScript>
     <UserScript>
       <CodeEvent>
-        <CodeKey>Radio</CodeKey>
-        <Message xsi:type="LuaString" Value="Start" />
-        <SenderKey>String Literal</SenderKey>
-        <SenderValue xsi:type="LuaString" Value="f1000_rtrg2180" />
+        <CodeKey>Mission</CodeKey>
+        <Message xsi:type="LuaString" Value="OnEnterQuestArea" />
+        <SenderKey>ANY / ALL</SenderKey>
+        <SenderValue xsi:type="LuaNil" />
       </CodeEvent>
-      <Identifier Value="Disable_Miller_Target_Marked_Dialogue" />
+      <Identifier Value="Disable_Default_Target_Radio_Call" />
       <Description />
       <Preconditions />
       <Operations>
         <Operation>
-          <Name>Play Support Radio Call</Name>
+          <Name>Disable Default Target Radio Call</Name>
           <Version>1.0</Version>
           <Category>SOUND EFFECTS</Category>
-          <Description>Plays radio calls from one or more radio group IDs. This call can attempt to interrupt a support radio talk that is already playing, or wait to play it afterwards.
-This operation also triggers a Radio -&gt; "Start" and Radio -&gt; "Finish" event, which can be handy for chaining logic, especially when a Delay Time is set for the call, without the need for a hidden timer.
-Applying this operation onto a Radio -&gt; "Start" event, with a Group ID as the Sender filter, can effectively overwrite a specific radio call.
-Notes on english dialogue for the group ids can be found here:
-https://mgsvmoddingwiki.github.io/RadioIDToEnglishVoice/</Description>
-          <EventFunctionTemplate>local |[1|ASSIGN_VARIABLE]| TppRadio.Play( |[1|VARIABLE,STRING,TABLE]|, { delayTime = |[2|NUMBER]|, isEnqueue = |[3|BOOLEAN]| } )</EventFunctionTemplate>
-          <EmbeddedChoosableValueSets>
-            <KeyValuesSet Key="Radio Calls">
-              <Value xsi:type="LuaVariable" Value="ThatsTheTarget">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg2170" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ThatsOneOfTheTargets">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg2200" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ThatsOneTargetEliminateHim">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg0610" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TargetConfirmedDead">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg2390" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TargetDestroyed">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg3240" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TargetExtractionConfirmed">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg1560" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TargetEliminatedOntoTheNext">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg3830" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ThatCutDownEnemyMechForceStrength">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg3890" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ThatsTheTargetGetHimOut">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg3080" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ThatsTheTargetLooksInjured">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg0620" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="BadlyWoundedExtractByHeli">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg1210" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="KazSendsHeliForTarget">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg1750" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ThatsOptionalPrisoner">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg0810" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="APrisoner">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg1870" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="WhatsAPrisonerDoingHere">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg2060" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="PrisonerDoesntLookLikeTarget">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg2040" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="PrisonerMightKnowTarget">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg0320" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="PrisonerKnewTargetMarkOnMap">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg2230" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="WhyNotInterrogateForTarget">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg0300" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ObjectiveIsToEliminateNoMatterHow">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg0240" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="DestroyTheTargets">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg0370" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TargetSomewhereInAreaFindHim">
-                <AssignedTo xsi:type="LuaString" Value="f1000_mprg0080" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="CombatVehicleNearbyTryToFindIt">
-                <AssignedTo xsi:type="LuaString" Value="f1000_mprg0230" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="IntelTeamConfirmedEnemyVehicleWatchOut">
-                <AssignedTo xsi:type="LuaString" Value="f1000_mprg0220" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="SideopObjectiveAroundThere">
-                <AssignedTo xsi:type="LuaString" Value="f2000_rtrg1910" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="FindTheTarget">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg0580" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="EasierToSpotTargetFromHighUp">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg0410" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TargetSomewhereInThatArea">
-                <AssignedTo xsi:type="LuaString" Value="f1000_mprg0190" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="EliminateTargetDontGetSpotted">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg0430" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TheEnemyDontLetThemSeeYou">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0770" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="CompletedWithoutSpottedPraise">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0360" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="AboutTimeForGuardShift">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0170" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="AlrightNowGetOut">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg1890" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ContinueOutOfAreaToComplete">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg2640" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ObjectiveCompleteExfilHotzone">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg2635" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="GreatWorkBoss">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg3590" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="OcelotMillerPraise">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg1640" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="HuhIsThatIt">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg1250" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="WOAHSTOPExtractTheTarget">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0116" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="HeyHoldOnWhatsGottenIntoYou">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg1150" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="GetHimOutOfThere">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg4260" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="GetHerOutOfThere">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg4270" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TreadCarefullyBoss">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0745" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="EyesOpenBoss">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0740" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ShhListen">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg2030" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="TheySpottedYouGetAwayNow">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0800" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="WhatsThis">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg0710" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ThatsAnEnemyUAV">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg4620" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="EnemyMustvePlantedMineWellSpotted">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg2130" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="WaitDidTheySetATrap">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg1120" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="ForestWillProvideCover">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg2000" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="OneOfOurStaffCapturedForSideop">
-                <AssignedTo xsi:type="LuaString" Value="f1000_rtrg4040" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="HeyBossUseMissleLauncher">
-                <AssignedTo xsi:type="LuaString" Value="f1000_oprg1430" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="BossDoYouHaveSniperRifle">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg1280" />
-              </Value>
-              <Value xsi:type="LuaVariable" Value="AvoidDirectApproach">
-                <AssignedTo xsi:type="LuaString" Value="f1000_esrg1560" />
-              </Value>
-            </KeyValuesSet>
-          </EmbeddedChoosableValueSets>
-          <Choices>
-            <Choice>
-              <Name>Radio ID</Name>
-              <Description>The radio group ID that will be played over the radio. Included preset IDs are wrapped in a variable names to provide context.
-In addition to the presets, this choice also accepts strings and index-based tables. Refer to the wiki for useful radio strings: https://mgsvmoddingwiki.github.io/RadioIDToEnglishVoice/
-A table with a list of strings will play each radio group message back-to-back, but it won't play the same string multiple times. 
-The Sender (for both Start and Finish events) is the first radio string provided.</Description>
-              <ChoosableValueSetsFilter>
-                <Key>Radio Calls</Key>
-              </ChoosableValueSetsFilter>
-              <AllowUIEdit>true</AllowUIEdit>
-              <AllowLiteral>true</AllowLiteral>
-              <AllowUserVariable>true</AllowUserVariable>
-              <Key>Variable</Key>
-              <Value xsi:type="LuaTableIdentifier" TableVariable="qvars">
-                <TableKeyPath>
-                  <Key xsi:type="LuaString" Value="Target_Marked_Dialogue_Overwrite" />
-                </TableKeyPath>
-                <EvaluatesTo>STRING</EvaluatesTo>
-              </Value>
-            </Choice>
-            <Choice>
-              <Name>Delay Time (Seconds)</Name>
-              <Description>Applies a delay before the radio call begins. This will also delay all enqueued radio calls as well, but any other scripts will continue to be executed, undelayed.</Description>
-              <ChoosableValueSetsFilter />
-              <AllowUIEdit>true</AllowUIEdit>
-              <AllowLiteral>true</AllowLiteral>
-              <AllowUserVariable>true</AllowUserVariable>
-              <Key>Number Literal</Key>
-              <Value xsi:type="LuaNumber" Value="0" />
-            </Choice>
-            <Choice>
-              <Name>Is Enqueued</Name>
-              <Description>Enqueued calls will wait for other calls to finish before starting.</Description>
-              <ChoosableValueSetsFilter />
-              <AllowUIEdit>true</AllowUIEdit>
-              <AllowLiteral>true</AllowLiteral>
-              <AllowUserVariable>true</AllowUserVariable>
-              <Key>Boolean Literal</Key>
-              <Value xsi:type="LuaBoolean" Value="false" />
-            </Choice>
-          </Choices>
+          <Description>Disables the one-time radio call where Kaz says "That's The Target" upon marking a target.</Description>
+          <EventFunctionTemplate>mvars.qst_isRadioTarget = true</EventFunctionTemplate>
+          <EmbeddedChoosableValueSets />
+          <Choices />
           <EmbeddedCommonDefinitions />
         </Operation>
       </Operations>
@@ -836,10 +623,6 @@ The Sender (for both Start and Finish events) is the first radio string provided
     <UserVariable Extrude="false">
       <Key xsi:type="LuaString" Value="Injured_Target_Name" />
       <Value xsi:type="LuaString" Value="Hostage_0" />
-    </UserVariable>
-    <UserVariable Extrude="false">
-      <Key xsi:type="LuaString" Value="Target_Marked_Dialogue_Overwrite" />
-      <Value xsi:type="LuaString" Value="f1000_oprg0095" />
     </UserVariable>
   </Variables>
 </ScriptDetails>
